added newpages and sass

--- a/donation.html
+++ b/donation.html
@@ -63,8 +63,8 @@
       <nav class="container">
         <ul class="left-nav">
           <li>
-            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+            <a href="index.html" class="logo"> <img src="images/logo.png"> </a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
@@ -85,11 +85,49 @@
         </ul>
       </nav>
     </header> 
-    <div class="user-image">
-        <img src="images/userprofilecover.png">
-    </div>
+    <div class="user-image"></div>
 
-    <!--I HAVE NO IDEA HOW TO EVEN GO ABOUT ENTERING A TABLE THAT WOULD TRACK DONATIONS-->
+    <!--TABLE FOR DONATIONS-->
+    <div class="table container">
+      <table>
+        <thead>
+          <tr>
+            <th width="100">Date</th>
+            <th width="150">Fundraiser</th>
+            <th width="100">Category</th>
+            <th width="100">Amount</th>
+            <th width="100">Method of Payment</th>
+            <th width="100">Status</th> 
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>08/12/14</td>
+            <td>Save Rachel's Tatas</td>
+            <td>Medical</td>
+            <td>$100</td>
+            <td>cc</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <td>08/12/14</td>
+            <td>Save Rachel's Tatas</td>
+            <td>Medical</td>
+            <td>$100</td>
+            <td>cc</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <td>08/12/14</td>
+            <td>Save Rachel's Tatas</td>
+            <td>Medical</td>
+            <td>$100</td>
+            <td>cc</td>
+            <td>Paid</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <div class="nav-footer">
       <div class="divider"></div>
