--- a/editprofile.html
+++ b/editprofile.html
@@ -63,8 +63,8 @@
       <nav class="container">
         <ul class="left-nav">
           <li>
-            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+            <a href="index.html" class="logo"> <img src="images/logo.png"> </a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
@@ -86,23 +86,23 @@
       </nav>
     </header> 
     <div class="user-image">
-        <div class="row">
-            <img src="images/userprofilecover.png">
-        </div>
+        <!--<div class="row">
+            <img src="images/usergeneric.png">
+        </div>-->
     </div>
 
     <div class="edit-profile container">
         <div class="one-fourth column">
             <label for="regularInput">First Name</label>
-            <input type="text" id="regularInput" />
+            <input type="text" id="first-name" />
             <label for="regularInput">City</label>
-            <input type="text" id="regularInput" />
+            <input type="text" id="city" />
             <label for="regularInput">Email Address</label>
-            <input type="email" id="regularInput" />
+            <input type="text" id="email-address" />
         </div>
         <div class="one-fourth column">
             <label for="regularInput">Last Name</label>
-            <input type="text" id="regularInput" />
+            <input type="text" id="last-name" />
              <!-- Label and select list -->
             <label for="selectList">Select List</label>
             <select id="selectList">
@@ -158,15 +158,15 @@
             <option value="Option 50">Wyoming</option>
             </select>
             <label for="regularInput">Website</label>
-            <input type="text" id="regularInput" />
+            <input type="text" id="website" />
         </div>
         <div class="one-fourth column">
             <label for="regularInput">Upload Photo</label>
-            <input type="text" id="regularInput" />
+            <input type="text" id="upload" />
             <!--<a href="#" class="button button-blue button-small">Upload</a>-->
             <!-- Label and textarea -->
             <label for="regularTextarea">About Yourself</label>
-            <textarea id="regularTextarea"></textarea>
+            <textarea id="about-you"></textarea>
              <!--<a href="#" class="button button-blue button-small button-right">Update</a>-->
         </div>
         <div class="up-buttons one-fourth column">
