--- a/frmanage.html
+++ b/frmanage.html
@@ -63,8 +63,8 @@
       <nav class="container">
         <ul class="left-nav">
           <li>
-            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+            <a href="index.html" class="logo"> <img src="images/logo.png"> </a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
@@ -85,9 +85,7 @@
         </ul>
       </nav>
     </header> 
-    <div class="user-image">
-        <img src="images/userprofilecover.png">
-    </div>
+    <div class="user-image"></div>
 
     <div class="managing-fundraisers container">
         <div class="row">
