--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="js/qtrotator.js"></script>
 
+    
+
   </head>
 
   <body class="raise-good-homepage">
@@ -18,8 +20,8 @@
       <nav class="container">
         <ul class="left-nav">
           <li>
-            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+            <a href="index.html" class="logo"> <img src="images/logo.png"> </a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
