--- a/showpage.html
+++ b/showpage.html
@@ -63,8 +63,8 @@
       <nav class="container">
         <ul class="left-nav">
           <li>
-            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+            <a href="index.html" class="logo"> <img src="images/logo.png"> </a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
@@ -88,7 +88,7 @@
   
     <div class="showpage-image">
 
-      <img src="images/guitar.png">
+      <img src="images/fundraisercover.png">
     
     </div>    
 
