--- a/signup.html
+++ b/signup.html
@@ -19,10 +19,10 @@
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <li><a href="#" class="logo">
+          <li><a href"index.html" class="logo">
             <img src="images/logo.png">
           </a></li>
-          <li><a href="#" class="nav-link">Browse</a></li>
+          <li><a href="browse.html" class="nav-link">Browse</a></li>
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
