--- a/browse.html
+++ b/browse.html
@@ -117,30 +117,46 @@
 <!--WHAT THE HECK AM I DOING WRONG???-->
         <div class="right-main-body two-thirds column">
             <div class="fundraiser-list">
-            <h5>What's Trending</h5>
+                <div class="row">
+                    <h5>What's Trending</h5>
+                </div>
                 <div class="reddirtcd">
-                    <ul>
-                        <li><img src="images/reddirtcd.png">
-                        <h6>Creative | Ends October 15, 2014</h6>
-                        <a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
-                    
-
-                        <div class="divider"></div>
-
-                        <li><img src="images/reddirtcd.png">
-                        <h6>Creative | Ends October 15, 2014</h6>
-                        <a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
-                    
-
-                        <div class="divider"></div>
-
-                        <li><img src="images/reddirtcd.png">
-                        <h6>Creative | Ends October 15, 2014</h6>
-                        <a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
-
-                        <div class="divider"></div>
-
-                    </ul>        
+                   <div class="row fundraiser-block">
+                        <div class="two columns">
+                            <img src="images/reddirtcd.png">
+                        </div>
+                        <div class="tweleve offset-by-one columns">
+                            <ul>
+                                <li><h6>Creative | Ends October 15, 2014</h6></li>
+                                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                            </ul>
+                        </div>
+                   </div> 
+                   <div class="divider"></div>  
+                    <div class="row fundraiser-block">
+                        <div class="two columns">
+                            <img src="images/reddirtcd.png">
+                        </div>
+                        <div class="tweleve offset-by-one columns">
+                            <ul>
+                                <li><h6>Creative | Ends October 15, 2014</h6></li>
+                                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                            </ul>
+                        </div>
+                   </div> 
+                   <div class="divider"></div> 
+                    <div class="row fundraiser-block">
+                        <div class="two columns">
+                            <img src="images/reddirtcd.png">
+                        </div>
+                        <div class="tweleve offset-by-one columns">
+                            <ul>
+                                <li><h6>Creative | Ends October 15, 2014</h6></li>
+                                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                            </ul>
+                        </div>
+                   </div> 
+                   <div class="divider"></div>     
                 </div>
             </div>
         </div>
