--- a/donation.html
+++ b/donation.html
@@ -85,10 +85,19 @@
         </ul>
       </nav>
     </header> 
-    <div class="user-image"></div>
-
+    <div class="user-image">
+        <div class="user-profile container">
+            <div class="row">
+                <div class="user-profile-block">
+                    <img src="images/userpic.png" class="avatar">
+                    <h5>John Smith</h5>
+                    <h6>Page Name here</h6>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--TABLE FOR DONATIONS-->
-    <div class="table container">
+    <div class="container">
       <table>
         <thead>
           <tr>
@@ -100,6 +109,7 @@
             <th width="100">Status</th> 
           </tr>
         </thead>
+        
         <tbody>
           <tr>
             <td>08/12/14</td>
@@ -109,6 +119,7 @@
             <td>cc</td>
             <td>Paid</td>
           </tr>
+        
           <tr>
             <td>08/12/14</td>
             <td>Save Rachel's Tatas</td>
@@ -133,7 +144,7 @@
       <div class="divider"></div>
         <div class="row">
           <ul class="footer-nav">
-            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="browse.html" class="nav-link">Browse</a></li>
             <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
