--- a/following.html
+++ b/following.html
@@ -58,7 +58,7 @@
     
   </head>
 
-  <body class="following-page">
+<body class="following-page">
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
@@ -84,32 +84,69 @@
           </div>
         </ul>
       </nav>
-    </header> 
-    <div class="user-image"></div>
-
-    <div class="following-fundraisers container">
-        <div class="row">
-          <div class="sixteen columns">
-            <div class"first-fundraiser">
-                <img src="images/reddirtcd.png">
-                <h5>Creative | Ends October 15, 2014</h5>
-                <a href="showpage.html">Eli's Texas Red Dirt CD</a>
+      <div class="user-image">
+        <div class="user-profile container">
+            <div class="row">
+                <div class="user-profile-block">
+                    <img src="images/userpic.png" class="avatar">
+                    <h5>John Smith</h5>
+                    <h6>Following</h6>
+                </div>
             </div>
-            <div class="divider"></div>
-            <div class"second-fundraiser">
-                <img src="images/reddirtcd.png">
-                <h5>Creative | Ends October 15, 2014</h5>
-                <a href="showpage.html">Eli's Texas Red Dirt CD</a>
-            </div>
-          </div>
         </div>
     </div>
+</header> 
+
+<section class="body-container">
+    <div class="container">
+        <div class="following-fundraiser two-thirds column">
+            <div class="following-list">
+                <div class="row fundraiser-block">
+                    <div class="three offset-by-two columns">
+                        <img src="images/reddirtcd.png">
+                    </div>
+                    <div class="tweleve offset-by-one columns">
+                        <ul>
+                            <li><h6>Creative | Ends October 15, 2014</h6></li>
+                            <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                        </ul>
+                    </div>
+
+                </div> 
+                <div class="divider"></div>  
+                <div class="row fundraiser-block">
+                    <div class="three offset-by-two columns">
+                        <img src="images/reddirtcd.png">
+                    </div>
+                    <div class="tweleve offset-by-one columns">
+                        <ul>
+                            <li><h6>Creative | Ends October 15, 2014</h6></li>
+                            <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </div>
+    <aside class="browse-more-sidebar">
+        <div class="row">
+            <h6>You might also check out</h6>
+        </div>
+        <div class="category-list">
+            <ul>
+                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+            </ul>
+        </div>
+    </aside>
+</section>
 
     <div class="nav-footer">
       <div class="divider"></div>
         <div class="row">
           <ul class="footer-nav">
-            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="browse.html" class="nav-link">Browse</a></li>
             <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
