--- a/frmanage.html
+++ b/frmanage.html
@@ -84,24 +84,46 @@
           </div>
         </ul>
       </nav>
+      <div class="user-image">
+        <div class="user-profile container">
+            <div class="row">
+                <div class="user-profile-block">
+                    <img src="images/userpic.png" class="avatar">
+                    <h5>John Smith</h5>
+                    <h6>Managing Fundraisers</h6>
+                </div>
+            </div>
+        </div>
+    </div>
     </header> 
-    <div class="user-image"></div>
-
-    <div class="managing-fundraisers container">
-        <div class="row">
-          <div class="sixteen columns">
-            <div class"manage-fundraiser">
-                <img src="images/reddirtcd.png">
-                <h5>Creative | Ends October 15, 2014</h5>
-                <a href="showpage.html">Eli's Texas Red Dirt CD</a>
+    
+    <div class="wrap container">
+        <div class="managing-fundraiser container">
+            <div class="fundraiser-list">
+                <div class="row fundraiser-block">
+                    <div class="three offset-by-one columns">
+                        <img src="images/reddirtcd.png">
+                    </div>
+                    <div class="tweleve offset-by-one columns">
+                        <ul>
+                            <li><h6>Creative | Ends October 15, 2014</h6></li>
+                            <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                        </ul>
+                    </div>
+                </div> 
+                <div class="divider"></div>  
+                <div class="row fundraiser-block">
+                    <div class="three offset-by-one columns">
+                        <img src="images/reddirtcd.png">
+                    </div>
+                    <div class="tweleve offset-by-one columns">
+                        <ul>
+                            <li><h6>Creative | Ends October 15, 2014</h6></li>
+                            <li><a href="showpage.html">Eli's Texas Red Dirt CD</a></li>
+                        </ul>
+                    </div>
+                </div> 
             </div>
-            <div class="divider"></div>
-            <div class"manage-fundraiser">
-                <img src="images/reddirtcd.png">
-                <h5>Creative | Ends October 15, 2014</h5>
-                <a href="showpage.html">Eli's Texas Red Dirt CD</a>
-            </div>
-          </div>
         </div>
     </div>
 
@@ -109,7 +131,7 @@
       <div class="divider"></div>
         <div class="row">
           <ul class="footer-nav">
-            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="browse.html" class="nav-link">Browse</a></li>
             <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
