--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
         <ul class="right-nav">
           <li><a href="signup.html" class="button button-blue button-small">Sign Up</a></li>
-          <li><a href="#" class="right-link">Log In</a></li>
+          <li><a href="editprofile.html" class="right-link">Log In</a></li>
         </ul>
       </nav>
     </header>  
@@ -156,7 +156,7 @@
       <div class="nav-footer container">
         <div class="row">
           <ul class="footer-nav">
-            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="browse.html" class="nav-link">Browse</a></li>
             <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
