--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
     <div class="nav-footer">
         <div class="row">
           <ul class="footer-nav">
-            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="browse.html" class="nav-link">Browse</a></li>
             <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
